--- a/style.css
+++ b/style.css
@@ -1,11 +1,14 @@
-body,div,ul,li,input,h1,h2,h3,h4,h5,h6 {
+body,div,ul,li,input,h1,h2,h3,h4,h5,h6,dl,dt,dd,p,img {
     margin: 0;
     padding: 0;
 }
 li {
     list-style: none;
 }
-
+img {
+    overflow: hidden;
+    border: 0;
+}
 .clearfix {
     *zoom: 1;
 }
@@ -24,12 +27,13 @@ li {
 .fr {
     float: right;
 }
-body{height: 2000px;}
 .container {
     width: 1226px;
     margin: 0 auto;
 }
-
+body {
+    font-family: "Microsoft Yahei";
+}
 /*topbar*/
 .topbar {
     position: relative;
@@ -38,7 +42,6 @@ body{height: 2000px;}
     background-color:#333;
 }
 .topbar a {
-    font-family: "Microsoft Yahei";
     font-size: 11px;
     color: #aaa;
     text-decoration: none;
@@ -93,7 +96,6 @@ body{height: 2000px;}
     background-color: #fff;
     display: none;
     width: 300px;
-    font-family: "Microsoft Yahei";
     font-size: 11px;
     position: absolute;
     right: 0;
@@ -137,7 +139,6 @@ body{height: 2000px;}
     line-height: 42px;
     padding-left: 30px;
     padding-right: 24px;
-    font-family: "Microsoft Yahei";
     font-size: 14px;
     color: #ffffff;
     cursor: pointer;
@@ -177,7 +178,6 @@ body{height: 2000px;}
 .sub-item-title {
     float: left;
     display: block;
-    font-family: "Microsoft Yahei";
     font-size: 14px;
     line-height: 76px;
 }
@@ -198,7 +198,6 @@ body{height: 2000px;}
 .navbar-nav-item{
     padding: 0 18px;
     font-size: 16px;
-    font-family: "Microsoft Yahei";
     text-decoration: none;
     color: #333;
     line-height: 55px;
@@ -306,8 +305,6 @@ body{height: 2000px;}
     float: left;
     width: 75px;
     height: 75px;
-    /*border-left: 1px solid #665e57;*/
-    /*border-bottom: 1px solid #665e57;*/
     text-align: center;
 }
 .hero-sub-item a{
@@ -351,22 +348,20 @@ body{height: 2000px;}
 
 .star {
     position: relative;
-    min-height: 30px;
     overflow: hidden;
+    margin-bottom: 40px;
 }
 .star-title {
     display: block;
     font-size: 22px;
-    font-family: "Microsoft Yahei";
     line-height: 54px;
     font-weight: 100;
-    margin-top: 30px;
+    margin-top: 26px;
 }
 .star-item-list {
     width: 2480px;
     height: 340px;
     text-align: center;
-    padding-top: 20px;
     position: relative;
     left: 0;
 }
@@ -384,7 +379,6 @@ body{height: 2000px;}
     font-weight: normal;
     margin-top: 20px;
     margin-bottom: 9px;
-    font-family: "Microsoft Yahei";
     text-decoration: none;
     color: #000;
 }
@@ -392,13 +386,10 @@ body{height: 2000px;}
     color: #b2b4b4;
     font-size: 13px;
     margin-top: 20px;
-    font-family: "Microsoft Yahei";
 }
 .star-item-price {
     color: #ff6700;
-
     padding-top: 10px;
-    font-family: "Microsoft Yahei";
 }
 .star-controller {
     position: absolute;
@@ -423,6 +414,322 @@ body{height: 2000px;}
     border-bottom: 1px solid #e0e0e0;
     cursor: pointer;
 }
+
+/*main*/
+.main {
+    background-color: #f5f5f5;
+    padding-top: 38px;
+    padding-bottom: 38px;
+}
+.main-box {
+    height: 694px;
+    padding-top: 6px;
+    /*font-family: "Microsoft Yahei";*/
+}
+.main-box-title {
+    display: block;
+    margin: 18px 0;
+    font-size: 22px;
+    font-weight: 200;
+}
+.main-box-left {
+    width: 234px;
+    height: 615px;
+}
+.main-box-right {
+    width: 992px;
+    height: 615px;
+}
+.main-right-big {
+    width: 234px;
+    height: 300px;
+    background-color: #fff;
+    text-align: center;
+    margin-left: 14px;
+    margin-bottom: 14px;
+    float: left;
+    position: relative;
+    top: 0;
+}
+.figure-img {
+    margin-top: 20px;
+}
+.title,.title-s {
+    display: block;
+    text-decoration: none;
+    color: #000;
+    font-size: 14px;
+    margin-top: 16px;
+}
+.desc {
+    font-size: 11px;
+    color: #b4b4b4;
+    margin-top: 5px;
+}
+.price,.price-s {
+    color: #ff6700;
+    font-weight: 200;
+    font-size: 14px;
+    margin-top: 10px;
+}
+.main-right-small {
+    width: 234px;
+    height: 143px;
+    background-color: #fff;
+    float: left;
+    margin-left: 14px;
+    margin-bottom: 14px;
+    position: relative;
+    top: 0;
+}
+.title-s {
+    margin-left: 30px;
+    margin-top: 40px;
+}
+.price-s {
+    margin-left: 30px;
+}
+.figure-img-s {
+    width: 80px;
+    height: auto;
+    position: absolute;
+    right: 20px;
+    top: 30px;
+}
+
+.main-content {
+    margin-top: 10px;
+}
+.main-content-title {
+    font-size: 22px;
+    font-weight: 200;
+    margin-bottom: 10px;
+}
+.main-content-item {
+    position: relative;
+    width: 296px;
+    height: 419px;
+    border-top: 1px solid #ff6700;
+    margin-right: 14px;
+    overflow: hidden;
+    background-color: #fff;
+    text-align: center;
+    top: 0;
+}
+.main-content-item-last {
+    margin-right: 0;
+}
+.main-content-item a {
+    text-decoration: none;
+}
+.main-content-item-title {
+    font-size: 16px;
+    color: #ff6700;
+    font-weight: 400;
+    margin: 40px auto 0;
+}
+.item-list {
+    width: 1184px;
+    position: relative;
+    left: 0;
+}
+.item-list li{
+    float: left;
+    width: 296px;
+}
+.item-list .name {
+    margin: 22px 0 5px;
+}
+.item-list .desc {
+    margin-bottom: 36px;
+}
+.item-list .desc a {
+    color: #b4b4b4;
+}
+.item-list .figure-img img{
+    width: 216px;
+    height: auto;
+}
+
+.xm-pager-wrapper {
+    position: absolute;
+    bottom: 15px;
+    margin-left: 88px;
+}
+.xm-pager {
+    height: 30px;
+    width: 120px;
+}
+.pager {
+    float: left;
+    width: 10px;
+    height: 10px;
+    padding: 10px;
+    line-height: 30px;
+    cursor: pointer;
+}
+.dot {
+    display: block;
+    width: 6px;
+    height: 6px;
+    border: 2px solid #fff;
+    border-radius: 6px;
+    background-color: #b0b0b0;
+}
+/*.pager:hover .dot{*/
+    /*background-color: #ff6700;*/
+/*}*/
+.pager-active .dot{
+    cursor: auto;
+    border-color: #ff6700;
+    background-color: #fff;
+}
+.pager-np {
+    display: none;
+}
+.pager-next {
+    position: absolute;
+    right: 0;
+    top: 200px;
+    width: 20px;
+    height: 50px;
+    line-height: 50px;
+    background-color: rgba(200,200,200,0.6);
+    color: #fff;
+    cursor: pointer;
+}
+.pager-prev {
+    position: absolute;
+    left: 0;
+    top: 200px;
+    line-height: 50px;
+    background-color: rgba(200,200,200,0.6);
+    color: #fff;
+    cursor: pointer;
+}
+
+/*service*/
+.service {
+    
+}
+
+.fast-ser {
+    height: 79px;
+    border-bottom: 1px solid #e0e0e0;
+    margin-bottom: 40px;
+}
+.fast-ser-item {
+    display: inline-block;
+    float: left;
+    width: 242px;
+    border-left: 1px solid #e0e0e0;
+    text-align: center;
+    color: #757575;
+    text-decoration: none;
+    margin: 26px 0;
+}
+.fast-ser-item:hover {
+    color: #ff6700;
+    transition: color .2s
+}
+.fast-ser-item-first {
+    border:none;
+}
+
+.service-list {
+    width: 960px;
+    margin-bottom: 38px;
+    padding-right: 12px;
+    border-right: 1px solid #e0e0e0;
+}
+
+.service-list-item {
+    width: 160px;
+    float: left;
+}
+.service-list-item-title {
+    font-size: 14px;
+    margin-bottom: 30px;
+}
+.service-list-item-content a {
+    text-decoration: none;
+    color: #757575;
+    font-size: 12px;
+    line-height: 26px;
+}
+.service-list-item-content a:hover {
+    color: #ff6700;
+}
+
+.service-contact {
+    text-align: center;
+    font-size: 12px;
+    width: 249px;
+    line-height: 18px;
+}
+.phone {
+    color: #ff6700;
+    font-size: 20px;
+    line-height: 20px;
+    margin-bottom: 10px;
+    display: block;
+}
+
+.online-service {
+    width: 118px;
+    height: 28px;
+    border: 1px solid #ff6700;
+    color: #ff6700;
+    line-height: 28px;
+    margin-top: 18px;
+    margin-left: 65px;
+    cursor: pointer;
+}
+
+/*footer*/
+.footer {
+    background-color: #f5f5f5;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    font-size: 12px;
+    line-height: 18px;
+}
+.footer-logo {
+    width: 36px;
+    height: 36px;
+    background-image: url("img/logo-mini.png");
+    margin-right: 10px;
+}
+.footer-link a{
+    color: #818181;
+    text-decoration: none;
+}
+.sep {
+    margin: 0 4px 0 6px;
+}
+.footer-link a:hover {
+    color: #ff6700;
+}
+.footer-num {
+    color: #b4b4b4;
+}
+
+.footer-img {
+
+}
+.f-img {
+    margin: 0 10px;
+}
+
+
+
+
+
+
+
+
+
+
 
 
 
